testing/kcbench: upgrade to 0.9.12
https://gitlab.com/knurd42/kcbench/-/releases/v0.9.12

--- a/testing/kcbench/APKBUILD
+++ b/testing/kcbench/APKBUILD
@@ -1,6 +1,6 @@
 maintainer="fossdd <fossdd@pwned.life>"
 pkgname=kcbench
-pkgver=0.9.11
+pkgver=0.9.12
 pkgrel=0
 pkgdesc="Linux kernel compile benchmark"
 url="https://gitlab.com/knurd42/kcbench"
@@ -26,9 +26,7 @@ depends="
 	musl-dev
 	"
 subpackages="$pkgname-doc"
-source="https://gitlab.com/knurd42/kcbench/-/archive/v$pkgver/kcbench-v$pkgver.tar.gz
-	allow-alpine.patch
-	"
+source="https://gitlab.com/knurd42/kcbench/-/archive/v$pkgver/kcbench-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check" # no tests
 
@@ -39,6 +37,5 @@ package() {
 }
 
 sha512sums="
-e36bcfb4aa25433ab9e4d4446f77228b19a9ab9e532c67463548a8836dd766218c223a720eb6e318bdbf81ba11661cc777c45aa956667af499e9ba1b71ed9bc2  kcbench-v0.9.11.tar.gz
-ccc5329a113b42ae6874f6505ab8ab0ae87586c02fc8ea251c57ecba80dba3b4ca67baaa8cafd755e1b4cbb47d5bfb7cd943880df934610ed212fe3c17de7838  allow-alpine.patch
+948611b7b58eeaadfccddb6a9e7f31d076c25473baffb15a7a38761b4abacc6d8870899c35081a281f36c76c44ff41c83cc63ab539ade1b694389d5d09d86366  kcbench-v0.9.12.tar.gz
 "
