community/ktimetracker: upgrade to 6.0.0

--- a/community/ktimetracker/APKBUILD
+++ b/community/ktimetracker/APKBUILD
@@ -1,35 +1,35 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=ktimetracker
-pkgver=5.0.1
-pkgrel=5
-# armhf blocked by extra-cmake-modules
+pkgver=6.0.0
+pkgrel=0
+# armhf blocked by qt6-qtdeclarative -> ki18n
 arch="all !armhf"
 url="https://apps.kde.org/ktimetracker/"
 pkgdesc="Todo management and time tracker"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
 makedepends="
 	extra-cmake-modules
-	kcalendarcore5-dev
-	kconfig5-dev
-	kconfigwidgets5-dev
-	kdbusaddons5-dev
-	kdoctools5-dev
-	ki18n5-dev
-	kidletime5-dev
-	kio5-dev
-	kjobwidgets5-dev
-	knotifications5-dev
-	ktextwidgets5-dev
-	kwindowsystem5-dev
-	kxmlgui5-dev
-	qt5-qtbase-dev
+	kcalendarcore-dev
+	kcmutils-dev
+	kconfig-dev
+	kconfigwidgets-dev
+	kdbusaddons-dev
+	kdoctools-dev
+	ki18n-dev
+	kidletime-dev
+	kio-dev
+	kjobwidgets-dev
+	knotifications-dev
+	kstatusnotifieritem-dev
+	ktextwidgets-dev
+	kwindowsystem-dev
+	kxmlgui-dev
+	qt6-qtbase-dev
 	samurai
 	"
-checkdepends="xvfb-run"
-source="https://download.kde.org/stable/ktimetracker/$pkgver/src/ktimetracker-$pkgver.tar.xz
-	Fix-formatTime.patch
-	"
+checkdepends="xwayland-run"
+#source="https://download.kde.org/stable/ktimetracker/$pkgver/src/ktimetracker-$pkgver.tar.xz
+source="https://invent.kde.org/pim/ktimetracker/-/archive/$pkgver/ktimetracker-$pkgver.tar.gz"
 subpackages="$pkgname-doc $pkgname-lang"
 
 build() {
@@ -46,7 +46,7 @@ check() {
 	case "$CARCH" in
 		armv7|x86) excluded_tests="$excluded_tests|task" ;;
 	esac
-	xvfb-run -a ctest --test-dir build -E "(($excluded_tests)test)"
+	wlheadless-run -- ctest --test-dir build -E "(($excluded_tests)test)"
 }
 
 package() {
@@ -54,6 +54,5 @@ package() {
 }
 
 sha512sums="
-78de8651efd72fa9fd5c7f06992ab8970e1d763c6f30f5eba52ec93bb6a2bb19ae777bc90809ef5198bc3b6a5f9f5ee78e240eadcacd8ce8489bdb28cd62431e  ktimetracker-5.0.1.tar.xz
-17e72f13e896c9b90ad6ee8eff607afabc14eac6f5a2be6e81e91f0fb63eda02a4064b5e66fef9ddcd09cfd84a910b5ff6603f5d191f64eb9ce98024e403aace  Fix-formatTime.patch
+d831fb6e464a16db24458c0e8e66e23e480ec04638274e66aeff4847ea647d4bf8edc4f725be0424a123d7e9414e1aa79fe991876424afebc7067ee4ebcab5af  ktimetracker-6.0.0.tar.gz
 "
