community/libpg_query: enable on 32-bit

--- a/community/libpg_query/APKBUILD
+++ b/community/libpg_query/APKBUILD
@@ -7,12 +7,11 @@ _pkgver=${pkgver/./-}
 pkgrel=0
 pkgdesc="C library for accessing the PostgreSQL parser outside of the server"
 url="https://github.com/pganalyze/libpg_query"
-# armhf,armv7,x86: fails to build
-arch="all !armhf !armv7 !x86"
+arch="all"
 license="BSD-3-Clause"
 makedepends="protobuf-c-dev xxhash-dev"
 subpackages="$pkgname-dbg $pkgname-dev"
-source="https://github.com/pganalyze/libpg_query/archive/$_pkgver/$pkgname-$_pkgver.tar.gz
+source="https://github.com/pganalyze/libpg_query/archive/$_pkgver/libpg_query-$_pkgver.tar.gz
 	dont-override-opt-level.patch
 	verbose-build.patch
 	unbundle-vendor-deps.patch
@@ -23,7 +22,7 @@ prepare() {
 	default_prepare
 
 	# Remove vendored libraries.
-	rm -Rf vendor
+	rm -r vendor
 }
 
 build() {
@@ -31,12 +30,7 @@ build() {
 }
 
 check() {
-	case "$CARCH" in
-		# XXX: Ignore errors on 32bit arches,
-		#  see https://github.com/pganalyze/libpg_query/issues/158
-		armhf | armv7 | x86) make test || true;;
-		*) make test;;
-	esac
+	make test
 }
 
 package() {
