community/mapplauncherd: upgrade to 4.2.15

--- a/community/mapplauncherd/APKBUILD
+++ b/community/mapplauncherd/APKBUILD
@@ -1,12 +1,10 @@
-# Contributor: Bart Ribbers <bribbers@disroot.org>
-# Maintainer: Bart Ribbers <bribbers@disroot.org>
+maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=mapplauncherd
-pkgver=4.2.14
+pkgver=4.2.15
 pkgrel=0
 pkgdesc="A daemon that helps to launch applications faster"
 url="https://github.com/sailfishos/mapplauncherd"
-# armhf blocked by extra-cmake-modules
-arch="all !armhf"
+arch="all"
 license="LGPL-2.1-only"
 depends_dev="
 	dbus-dev
@@ -21,7 +19,8 @@ makedepends="$depends_dev
 	"
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://github.com/sailfishos/mapplauncherd/archive/$pkgver/mapplauncherd-$pkgver.tar.gz
-	gcc14.patch"
+	gcc14.patch
+	"
 options="!check" # No tests
 
 build() {
@@ -38,6 +37,6 @@ package() {
 	DESTDIR="$pkgdir" cmake --install build
 }
 sha512sums="
-314479b4444066df9c1214360d20d4f49aaef74c3a97e51bcab9a411d6113eb3fe250e174ccac5f574ddbb07112b8ba938fd7e9e4377a59d3a3b928909098f13  mapplauncherd-4.2.14.tar.gz
+76a3254e9965ccd75da36d838de91b133b2d26fff67cfae8af21c0fd447f9cc7dcc8762b6152d9af05152407b45ea30da7efbd367a180bef463946d0483cf07d  mapplauncherd-4.2.15.tar.gz
 6ff7ac9859715dac9276a304f306c12c3af022e2651fd68676fd916caef92743c84811d52451fbd71733c516c7a7f671cecfdbdcbb82f6fa815e123bb7419af2  gcc14.patch
 "
