community/py3-pynitrokey: depend on py3-nitrokey
Fixes https://gitlab.alpinelinux.org/alpine/aports/-/issues/17070#note_497083

--- a/community/py3-pynitrokey/APKBUILD
+++ b/community/py3-pynitrokey/APKBUILD
@@ -1,7 +1,7 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=py3-pynitrokey
 pkgver=0.8.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Python Library for Nitrokey devices"
 url="https://github.com/Nitrokey/pynitrokey"
 # blocked by py3-spsdk
@@ -19,6 +19,7 @@ depends="
 	py3-intelhex
 	py3-libusb1
 	py3-nethsm
+	py3-nitrokey
 	py3-nkdfu
 	py3-protobuf
 	py3-pyserial
