community/anki: upgrade to 25.02.4
https://github.com/ankitects/anki/releases/tag/25.02.4

Included a post install/upgrade message about incompatible addons

--- a/community/anki/APKBUILD
+++ b/community/anki/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Callum Andrew <contact@candrew.net>
 # Maintainer: Frank Oltmanns <alpine@oltmanns.dev>
 pkgname=anki
-pkgver=25.02.1
+pkgver=25.02.4
 pkgrel=0
 # Remember to update the following lines when updating the pkgver
 # 1. checkout the release tag
@@ -10,7 +10,7 @@ pkgrel=0
 # 3. ftl -> git submodule
 _tags_ftl_core="0fe0162f4a18e8ef2fbac1d9a33af8e38cf7260e"
 _tags_ftl_desktop="17216b03db7249600542e388bd4ea124478400e5"
-_anki_commit="272cac5b"
+_anki_commit="acc6aa7f"
 
 # This APKBUILD and the patches use the PKGBUILD for Anki 23.10 as
 # a basis.
@@ -73,6 +73,7 @@ depends="
 	qt6-qtsvg
 	"
 subpackages="$pkgname-pyc"
+install="$pkgname.post-install $pkgname.post-upgrade"
 source="
 	anki-$pkgver.tar.gz::https://github.com/ankitects/anki/archive/refs/tags/$pkgver.tar.gz
 	anki-core-i18n-$_tags_ftl_core.tar.gz::https://github.com/ankitects/anki-core-i18n/archive/$_tags_ftl_core.tar.gz
@@ -152,7 +153,7 @@ package() {
 }
 
 sha512sums="
-6d2aa242d25563dcd30e304b8ff5240dd35d8d70b85b5c567470aa510e32ce0ed7c35032a13dec5a4ba40e1726bdb12d1f61bf2975223cbbaa743c1b59d7d338  anki-25.02.1.tar.gz
+d371c79e6f78af07420c7384a47eef63e6764775386c94fa52203d2bb03929b8176b51e042de70613d1985317c840fcb3ff9c9cb9f7147d19312a4e505d4b766  anki-25.02.4.tar.gz
 c72eaea9e0f350d092a44f7623a7cfdcb74ff99a97ca4b53c51b1b26af387c9c6cd64bfca3dc4577c14c3ee4040b8ce1a7a50f2e209b0fa47c5297f97c92a910  anki-core-i18n-0fe0162f4a18e8ef2fbac1d9a33af8e38cf7260e.tar.gz
 6d91607c6b0805e6dfce8a93dbf46ac945e9b1631aa054cb98e513d7a6da64d905035b8da8ea5d10c0d700a0aa96b056748d956342fe4ddf7232f7f7540ee88a  anki-desktop-ftl-17216b03db7249600542e388bd4ea124478400e5.tar.gz
 36c3bddb5de84f0f5eebe46b506b9723ecc80dd69281b3d2ffc9842fa2db181ececd8232ae0b3366bcfd5cb68a4d760abcadd3dada2a7ce2d2da26586a132e09  no-update.patch
