community/kasts: remove already applied patch
https://invent.kde.org/multimedia/kasts/-/commit/240f8aa298fb51280cf134aad3234ceb66be589a

--- a/community/kasts/APKBUILD
+++ b/community/kasts/APKBUILD
@@ -41,9 +41,7 @@ makedepends="
 	"
 subpackages="$pkgname-lang"
 _repo_url="https://invent.kde.org/multimedia/kasts.git"
-source="https://download.kde.org/stable/release-service/$pkgver/src/kasts-$pkgver.tar.xz
-	0001-kasts-Fix-dialog-boxes-after-recent-Kirigami-updates.patch
-	"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kasts-$pkgver.tar.xz"
 options="!check" # No tests
 
 build() {
@@ -60,5 +58,5 @@ package() {
 
 sha512sums="
 111625cdccf8e0795265ce2dee96bda3544fe28ea9b075aec13d39044a0c20a190434958c86c64c8f966659fc7c5f43c280b63861883a128f6612eb950fd28f2  kasts-25.04.0.tar.xz
-503cb41ce397dc77b91cf834666da4feed32cb1f0daa158fbd29a70c234787e7aa8592fb2608de53c614fb8e42a12ced4e7133d3c854d5ff291a06df9ff1ba40  0001-kasts-Fix-dialog-boxes-after-recent-Kirigami-updates.patch
+f93621f275bcea507e86dc3b50a588d48dfde57fbe2630872f578bfda10d03ab34b504f624b45407b3665b16962a2f74d89a66361a1a5498b75f9dfa13d4c1cc  0001-kasts-Fix-dialog-boxes-after-recent-Kirigami-updates.patch
 "
