community/kclock: remove already applied patch
https://invent.kde.org/utilities/kclock/-/commit/7c8c62dbc2e6185b8ef93ed1b1f17588e3df5b70

--- a/community/kclock/APKBUILD
+++ b/community/kclock/APKBUILD
@@ -33,9 +33,7 @@ makedepends="
 	"
 subpackages="$pkgname-lang"
 _repo_url="https://invent.kde.org/utilities/kclock.git"
-source="https://download.kde.org/stable/release-service/$pkgver/src/kclock-$pkgver.tar.xz
-	0001-kclock-AlarmForm-create-duration-and-snooze-models-correctly.patch
-	"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kclock-$pkgver.tar.xz"
 
 build() {
 	cmake -B build -G Ninja \
