--- a/community/qt6-qtbase/APKBUILD
+++ b/community/qt6-qtbase/APKBUILD
@@ -3,7 +3,7 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qt6-qtbase
 pkgver=6.8.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A cross-platform application and UI framework"
 url="https://qt.io/"
 arch="all"
@@ -74,6 +74,7 @@ esac
 
 source="https://download.qt.io/$_rel/qt/${pkgver%.*}/${pkgver/_/-}/submodules/qtbase-everywhere-src-${pkgver/_/-}.tar.xz
 	0001-lfs64.patch
+	dns-resolver.patch
 	"
 options="!check" # Tests don't currently run for some reason
 
@@ -188,4 +189,5 @@ x11() {
 sha512sums="
 4a074aca1c8bcca536fd428c969c0119f5131d0d52b67028edbb75a81dc6e0c15394f69e29cef513e6d8c6e93384cedc38dd03b0eed6ab1bbafbe2b5bbc85799  qtbase-everywhere-src-6.8.2.tar.xz
 390e2998483696e4af6f754be6611eb01f93b5185e81f8ad21c45cd267bab58a347902230b456b4c9fae339d6b8ecb6f7cf695e90fb086d92b9c5f7561993898  0001-lfs64.patch
+5f144f7a26b254210e36cf1e4962af26199c16bd965cfe40305f4bcd36d23fd623083701bb338f7d6779d18476461fbc00f9fb773a74a1ba5e4ce2a801f22a5a  dns-resolver.patch
 "
