community/py3-jsonpatch: build with gpep517

--- a/community/py3-jsonpatch/APKBUILD
+++ b/community/py3-jsonpatch/APKBUILD
@@ -4,32 +4,38 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=py3-jsonpatch
-_pkgname=python-json-patch
 pkgver=1.33
-pkgrel=2
+pkgrel=3
 pkgdesc="Apply JSON-Patches (RFC 6902)"
 url="https://github.com/stefankoegl/python-json-patch"
 arch="noarch"
 license="BSD-3-Clause"
 depends="py3-jsonpointer"
-makedepends="py3-setuptools py3-wheel"
+makedepends="py3-gpep517 py3-setuptools py3-wheel"
 subpackages="$pkgname-pyc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/stefankoegl/python-json-patch/archive/v$pkgver.tar.gz"
-builddir="$srcdir"/$_pkgname-$pkgver
+builddir="$srcdir/python-json-patch-$pkgver"
 
 replaces="py-jsonpatch" # Backwards compatibility
 provides="py-jsonpatch=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
-	python3 setup.py build
+	gpep517 build-wheel \
+		--wheel-dir .dist \
+		--output-fd 3 3>&1 >&2
 }
 
 check() {
-	python3 setup.py test
+	python3 -m venv --clear --without-pip --system-site-packages .testenv
+	.testenv/bin/python3 -m installer .dist/*.whl
+	.testenv/bin/python3 -m unittest
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer -d "$pkgdir" \
+		.dist/*.whl
 }
 
-sha512sums="0685f63949bee135b19d0962bdaab32ba97e02772b6650d885be57c09a2e89546222ebba1a4cf146b2f91027790b0a3ff2ea072d66dcebf9153aa601638bbfa2  py3-jsonpatch-1.33.tar.gz"
+sha512sums="
+0685f63949bee135b19d0962bdaab32ba97e02772b6650d885be57c09a2e89546222ebba1a4cf146b2f91027790b0a3ff2ea072d66dcebf9153aa601638bbfa2  py3-jsonpatch-1.33.tar.gz
+"
