--- a/main/llvm-runtimes/APKBUILD
+++ b/main/llvm-runtimes/APKBUILD
@@ -6,7 +6,7 @@ pkgname=llvm-runtimes
 # Note: Update together with llvm.
 pkgver=20.1.3
 _llvmver=${pkgver%%.*}
-pkgrel=1
+pkgrel=2
 pkgdesc="LLVM Runtimes"
 url="https://llvm.org/"
 arch="all"
@@ -43,7 +43,7 @@ options="!check"
 case "$CARCH" in
 # Sanitizers are broken on other arches.
 # Keep in sync with compiler-rt-sanitizer-supported-arch.patch.
-aarch64|ppc64le|x86_64|riscv64)
+aarch64|ppc64le|x86_64|riscv64|loongarch64)
 	_build_sanitizers='ON'
 	;;
 *)
@@ -154,7 +154,7 @@ sha512sums="
 ed30960bc5dea6d611a691e12949ddff1346fb5ba0ff36741496bf36442468f3724bb98526d230a97e58848bef703d6b793db27e254d927004f1903e3f2816ed  armv6-arch.patch.noauto
 e3831613d807695ff5fb3d0903954bf4ccf8907852a488959fb4b002b6ec0e8b8d0beea76aa99621ccaec4d30fe61311d5cb067023ff486826c42d3084f134be  compiler-rt-lsan-dtp-offset.patch
 80929e113a1ba879a09ec664d2bd0f2e8a1c69b34159266b92cc17540959fd79ad8a55ad0bc26196974427a47803f0cb25c20269125458f91422f2d1c758e186  compiler-rt-ppc-fixes.patch
-bd3f7b8929a08a3d3b412da6b248a7a2933069bafd8a8f3efea464886dd4a12e1b981c83d8330388221df62a5b49af1ed393068343b80a1de05f0176bb05b960  compiler-rt-sanitizer-supported-arch.patch
+7754a0b6d5d65bc7bcc35d8d16d43c21e202a068ae729508d2d00a3e32b88483763666a9ec3130f8be4cefd59aee30f2bd46f07e6bef0519084c05a96342fdcc  compiler-rt-sanitizer-supported-arch.patch
 98eeabdeb08d6c9ed767cfd8a9ed29dc6732cd87235395b51245081299c7367194fb533e1c064249a32a98da68ae396f64e304a97a2d2b7dbdb874f77da160df  libunwind-link-libssp.patch
 0a4f0b5ae82f93387e8880c6e293eef9234f0cb4dadf7c52846f1a45612b931d2b460579d08d48548de9a7e6372b75f95e05e32683a60911a3d48f567cd4808b  fix-msan-with-musl.patch
 "
