community/kdepim-addons: remove obsolete patch

--- a/community/kdepim-addons/APKBUILD
+++ b/community/kdepim-addons/APKBUILD
@@ -64,8 +64,7 @@ checkdepends="
 	"
 subpackages="$pkgname-lang"
 _repo_url="https://invent.kde.org/pim/kdepim-addons.git"
-source="https://download.kde.org/stable/release-service/$pkgver/src/kdepim-addons-$pkgver.tar.xz
-	update-libc.patch"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kdepim-addons-$pkgver.tar.xz"
 # net required to download Rust crates
 # tests are broken and hang
 options="!check net"
@@ -89,5 +88,4 @@ package() {
 
 sha512sums="
 416b1c4fe50b9c45f9d270ad3f3670001ec7b5fecc858149b84827196a530497bb80ee15da532fba792d5d611e931320654472081cc5107ae2c7aad796a50891  kdepim-addons-25.04.0.tar.xz
-65ad29e9c901b03591f761c32b35a5a85295b009ca3ab879df5db390269d13da6f1afd83f7623326cdbab96d737c2ba231d327f688a3779263e15bdab268a06b  update-libc.patch
 "
