community/kiconthemes: add missing build dependency on kiconthemes

--- a/community/kasts/APKBUILD
+++ b/community/kasts/APKBUILD
@@ -23,6 +23,7 @@ makedepends="
 	kcoreaddons-dev
 	kcrash-dev
 	ki18n-dev
+	kiconthemes-dev
 	kirigami-addons-dev
 	kirigami-dev
 	networkmanager-qt-dev
