--- a/community/kdeconnect/APKBUILD
+++ b/community/kdeconnect/APKBUILD
@@ -47,6 +47,7 @@ subpackages="$pkgname-doc $pkgname-lang $pkgname-nftables::noarch $pkgname-zsh-c
 _repo_url="https://invent.kde.org/network/kdeconnect-kde.git"
 source="https://download.kde.org/stable/release-service/$pkgver/src/kdeconnect-kde-$pkgver.tar.xz
 	60_kdeconnect.nft
+	0001-kdeconnect-Fix-build-on-platforms-with-sizeof-qsizetype-smaller-than-sizeof-qint64.patch
 	"
 builddir="$srcdir/$pkgname-kde-$pkgver"
 
@@ -82,4 +83,5 @@ nftables() {
 sha512sums="
 32787125fd403dd2edf45e870c491da0ff182c86e4915b3d6c9ac04a9618a40b8a36cf6f34ce3c50669841674026e316eb0d93f8e0376ca193344624112a9bd3  kdeconnect-kde-25.04.0.tar.xz
 0ccc2cb0ffd3892698b45bcf723cfdd23ad98f0e2b0436cd0a91d9ed13c6992853e2c4092ee8a0edc6216f1f262151e99e344b8f16c52237e9ff8de62fd37cae  60_kdeconnect.nft
+29f5c9817d2ed122e19e0bd28c6ea37cafb2b6c489253b792c1a33aa274d8ce14830807e395eb4726d153149bc2f1aad7f03513ab0ba3e5b8faee03489230460  0001-kdeconnect-Fix-build-on-platforms-with-sizeof-qsizetype-smaller-than-sizeof-qint64.patch
 "
