*/*: remove useless -C "$builddir"
The commands are already run in builddir

--- a/main/xapian-core/APKBUILD
+++ b/main/xapian-core/APKBUILD
@@ -39,7 +39,7 @@ check() {
 	# loads etc.
 	#
 	# See https://trac.xapian.org/ticket/764#comment:2
-	make AUTOMATED_TESTING=1 VALGRIND= -C "$builddir" check
+	make AUTOMATED_TESTING=1 VALGRIND= check
 }
 
 package() {
