--- a/main/efitools/APKBUILD
+++ b/main/efitools/APKBUILD
@@ -7,7 +7,8 @@ pkgrel=11
 pkgdesc="EFI tools"
 url="https://git.kernel.org/pub/scm/linux/kernel/git/jejb/efitools.git"
 # others: limited by sbsigntool
-arch="all !armhf !s390x !ppc64le !loongarch64"
+# riscv64: sbsigntool appears to be broken
+arch="all !armhf !s390x !ppc64le !loongarch64 !riscv64"
 license="(GPL-2.0-only AND LGPL-2.1-or-later) WITH OpenSSL-Exception"
 options="!check" # no testsuite
 # efi-readvar requires mount(8) with -l option
