community/qt6-qtmultimedia: add missing build dependency on gst-plugins-bad

--- a/community/qt6-qtmultimedia/APKBUILD
+++ b/community/qt6-qtmultimedia/APKBUILD
@@ -13,6 +13,7 @@ depends_dev="
 	$pkgname-gstreamer=$pkgver-r$pkgrel
 	alsa-lib-dev
 	ffmpeg-dev
+	gst-plugins-bad-dev
 	gst-plugins-base-dev
 	gstreamer-dev
 	libva-glx-dev
