community/libhangul: fix build

--- a/community/libhangul/APKBUILD
+++ b/community/libhangul/APKBUILD
@@ -18,7 +18,8 @@ builddir="$srcdir/libhangul-libhangul-$pkgver"
 
 prepare() {
 	default_prepare
-	./autogen.sh
+	touch ChangeLog
+	autoreconf -vif
 }
 
 build() {
