--- a/community/nats-server/APKBUILD
+++ b/community/nats-server/APKBUILD
@@ -1,17 +1,21 @@
 # Contributor: Henrik Riomar <henrik.riomar@gmail.com>
 # Maintainer: Henrik Riomar <henrik.riomar@gmail.com>
 pkgname=nats-server
-pkgver=2.10.21
-pkgrel=4
+pkgver=2.10.27
+pkgrel=0
 pkgdesc="High-Performance server for NATS.io"
 url="https://github.com/nats-io/nats-server"
 arch="all !x86 !armv7 !armhf !s390x !ppc64le !riscv64 !loongarch64" # limited by failing check()
 license="Apache-2.0"
 makedepends="go"
 options="net" # Go modules
-source="https://github.com/nats-io/nats-server/archive/v$pkgver/nats-server-$pkgver.tar.gz"
+source="https://github.com/nats-io/nats-server/archive/v$pkgver/nats-server-$pkgver.tar.gz
+	make-TestNoRaceSeqSetRelativeSpeed-more-forgiving.patch
+	"
 
 # secfixes:
+#   2.10.27-r0:
+#     - CVE-2025-30215
 #   2.10.4-r0:
 #     - CVE-2023-46129
 
@@ -42,5 +46,6 @@ package() {
 }
 
 sha512sums="
-b1ebb94436d8e0d1ba8697c7fde1910e8b766d751f4c6cb6bd9376ee34da199d4698a20e0378703a7ecd3d23ff605d4fc39bf6874c430b302a6afd36ec99c7bf  nats-server-2.10.21.tar.gz
+8a1975ddbabdf9c30d846e59035406f6245444c8f39e1114db91b40d139bda7c58065d7b92681f502fb03dbb861fdb5b5970a9a0fbe57b2738f009bbb2fa7268  nats-server-2.10.27.tar.gz
+b4b5072d5d0fa5c0ecf6dfad77b668d1a470d7fac89a99daeb48f6be69d2620b5f15a37d173c497810485802341c030b0e94073ce9c0ef7d5e1396d1c62471c5  make-TestNoRaceSeqSetRelativeSpeed-more-forgiving.patch
 "
