community/nats-server: security upgrade to 2.10.27
Make TestNoRaceSeqSetRelativeSpeed even more forgiving, needed
for aarch64.

--- a/community/nats-server/APKBUILD
+++ b/community/nats-server/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Henrik Riomar <henrik.riomar@gmail.com>
 # Maintainer: Henrik Riomar <henrik.riomar@gmail.com>
 pkgname=nats-server
-pkgver=2.10.26
-pkgrel=2
+pkgver=2.10.27
+pkgrel=0
 pkgdesc="High-Performance server for NATS.io"
 url="https://github.com/nats-io/nats-server"
 arch="all !riscv64" # limited by failing check()
@@ -14,6 +14,8 @@ source="https://github.com/nats-io/nats-server/archive/v$pkgver/nats-server-$pkg
 	"
 
 # secfixes:
+#   2.10.27-r0:
+#     - CVE-2025-30215
 #   2.10.4-r0:
 #     - CVE-2023-46129
 
@@ -44,6 +46,6 @@ package() {
 }
 
 sha512sums="
-0b8317b8cdf838356795e71395de0a9aefde79a7cce5f2b8d64199b7f4f3ed0821bc852c24c12ed3dbea2ed20f1ea7e6e60f1f4cbeac6e09fede366ec1a87602  nats-server-2.10.26.tar.gz
-7c6ce083da431b5fa807b69ac2bbabb9813152af1ce1bcb6bbd60d3476b5b97b8c14aaf5469b841f49137a66d1998ec94beed73cdce5ca21f52840e9b7ef4bcd  make-TestNoRaceSeqSetRelativeSpeed-more-forgiving.patch
+8a1975ddbabdf9c30d846e59035406f6245444c8f39e1114db91b40d139bda7c58065d7b92681f502fb03dbb861fdb5b5970a9a0fbe57b2738f009bbb2fa7268  nats-server-2.10.27.tar.gz
+b4b5072d5d0fa5c0ecf6dfad77b668d1a470d7fac89a99daeb48f6be69d2620b5f15a37d173c497810485802341c030b0e94073ce9c0ef7d5e1396d1c62471c5  make-TestNoRaceSeqSetRelativeSpeed-more-forgiving.patch
 "
