community/libmbim: take over maintainership

--- a/community/libmbim/APKBUILD
+++ b/community/libmbim/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Stuart Cardall <developer@it-offshore.co.uk>
-# Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=libmbim
 pkgver=1.30.0
 pkgrel=0
