community/libqmi: take over maintainership

--- a/community/libqmi/APKBUILD
+++ b/community/libqmi/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Stuart Cardall <developer@it-offshore.co.uk>
-# Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=libqmi
 pkgver=1.34.0
 pkgrel=1
