community/modemmanager: take over maintainership

--- a/community/modemmanager/APKBUILD
+++ b/community/modemmanager/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Stuart Cardall <developer@it-offshore.co.uk>
-# Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=modemmanager
 pkgver=1.22.0
 pkgrel=2
