--- a/community/kdenlive/APKBUILD
+++ b/community/kdenlive/APKBUILD
@@ -5,7 +5,7 @@
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kdenlive
 pkgver=25.04.0
-pkgrel=0
+pkgrel=1
 # ppc64le mlt uses 64bit long double while libgcc uses 128bit long double
 # ppc64le, s390x and riscv64 blocked by qt6-qtwebengine -> purpose
 arch="all !armhf !ppc64le !s390x !riscv64"
@@ -44,7 +44,10 @@ build() {
 	cmake -B build -G Ninja \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_INSTALL_LIBDIR=lib
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DBUILD_TESTING="$(want_check && echo ON || echo OFF)" \
+		-DIMATH_INSTALL=OFF \
+		-DIMATH_INSTALL_PKG_CONFIG=OFF
 	cmake --build build
 }
 
