community/oh-my-zsh: upgrade to 0_git20250424
https://github.com/ohmyzsh/ohmyzsh/compare/5fd2059e5eda17ee07501a21d47189d4b96d6ff3...959b6cf5eed78f108dc6e0f46b53816f5168dd3a

--- a/community/oh-my-zsh/APKBUILD
+++ b/community/oh-my-zsh/APKBUILD
@@ -1,10 +1,10 @@
 # Contributor: Orson Teodoro <orsonteodoro@hotmail.com>
 # Contributor: Jacek Pruciak <alpine@juniorjpdj.pl>
 # Contributor: Fabricio Silva <hi@fabricio.dev>
-# Maintainer: fossdd <fossdd@pwned.life>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=oh-my-zsh
-pkgver=0_git20250123
-_commit="5fd2059e5eda17ee07501a21d47189d4b96d6ff3"
+pkgver=0_git20250424
+_commit="959b6cf5eed78f108dc6e0f46b53816f5168dd3a"
 pkgrel=0
 pkgdesc="Delightful framework for managing zsh configurations including plugins and themes"
 url="https://ohmyz.sh/"
@@ -43,7 +43,7 @@ package() {
 }
 
 sha512sums="
-6bdcfaf902ff97c0192a7e0e86c4c371ab8ee74f1a35a89e329c4ad785d696f13a4d7c698e0a0b7973963c01d618c1d6c53d223c5591597c78d59f8b76038b06  oh-my-zsh-0_git20250123.tar.gz
+bb9610322f3203b4f5b0dca395d5a2a50106e89571525ed261e43f65586826151ec920a9bcc8ba674054429701e91622323b540405e2ade41894a4bf9f4389f6  oh-my-zsh-0_git20250424.tar.gz
 7ecd65706dd09eddf400d3742ed8f35005dc4126c74c88e5b7608734f903f7a5c5ff36373d1d2e9c4d943a1eaa451a868b7b899f93e82421883bded27a9943ea  install-path.patch
 f19b953d03d37328bd0fe172565e9003ab3a7d85779fc62d6335a7cf90f8e5cd71e0085b976b27b07509eaf31c3cab00b716c4b8b9e528e46b5014026b94a5f0  disable-update-check.patch
 "
