--- a/community/jekyll/APKBUILD
+++ b/community/jekyll/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=jekyll
 _gemname=jekyll
-pkgver=4.3.4
-pkgrel=1
+pkgver=4.4.1
+pkgrel=0
 pkgdesc="A blog-aware static site generator in Ruby"
 url="https://jekyllrb.com/"
 arch="noarch"
@@ -11,7 +11,9 @@ license="MIT"
 # Dependencies specified in jekyll.gemspec. Keep in sync!
 _gemspec_depends="$depends
 	ruby-addressable~2
+	ruby-base64
 	ruby-colorator~1
+	ruby-csv
 	ruby-em-websocket~0
 	ruby-i18n~1
 	ruby-jekyll-sass-converter<=4
@@ -19,8 +21,9 @@ _gemspec_depends="$depends
 	ruby-kramdown>=2.3.1
 	ruby-kramdown-parser-gfm~1
 	ruby-liquid~4
-	ruby-mercenary<=0.5
+	ruby-mercenary
 	ruby-pathutil~0
+	ruby-resolv
 	ruby-rouge<=5.0
 	ruby-safe_yaml~1
 	ruby-terminal-table<=4.0
@@ -67,6 +70,6 @@ _ruby() {
 }
 
 sha512sums="
-eb4b233ef7d6b0761e462560b2710dca64f61dab3d6a6f0ce6d675e284af5d92a5ea6a195e87b3dee6e117744decaba30c70ad9b123e72c8a5adb25d9dca234f  jekyll-4.3.4.tar.gz
+e2a6784fbd66df905e1b2839eb051518a497030f88bc89501233f37fad6ec3ee02669d6a6b13887fb0948d88b4dc9578a194508799947cf10ded217fdc9d5f1e  jekyll-4.4.1.tar.gz
 5c67bc5e90fbd1283687cff1cc01491de842d4235b277658aefbbdac88b3b7d104e1293de177b5c41eace4a04433ad4ba333efebde4ad85bb0f9b6663b414e4b  gemspec.patch
 "
