community/ruby-pkg-config: upgrade to 1.6.1

--- a/community/ruby-pkg-config/APKBUILD
+++ b/community/ruby-pkg-config/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ruby-pkg-config
 _gemname=pkg-config
-pkgver=1.5.8
+pkgver=1.6.1
 pkgrel=0
 pkgdesc="pkg-config implemented by pure Ruby"
 url="https://github.com/ruby-gnome/pkg-config"
@@ -23,7 +23,7 @@ build() {
 
 check() {
 	# test_cflags*: pkg-config returns -I flags in a different order.
-	ruby test/run-test.rb \
+	ruby test/run.rb \
 		--ignore-name test_cflags \
 		--ignore-name test_cflags_only_I \
 		--verbose
@@ -50,5 +50,5 @@ package() {
 }
 
 sha512sums="
-317864e2195e4d08476dfa84c14b744cf6fab37d56f8d77fac48e1ce31e1d73f4481bebfe29e0c9c9243957f8f360d90e7b57408e3976f55af6a0c455ba8e8c6  ruby-pkg-config-1.5.8.tar.gz
+e4c37710e41c7c5e6914cca804d3deb89dd1c8081c1fad54b88121306a4caabbb10704adc43d0279cdb678f953e70cfa184a8beaec7b234a588398f05ce97e15  ruby-pkg-config-1.6.1.tar.gz
 "
