--- a/community/ruby-diff-lcs/APKBUILD
+++ b/community/ruby-diff-lcs/APKBUILD
@@ -2,10 +2,8 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ruby-diff-lcs
 _gemname=${pkgname#ruby-}
-pkgver=1.5.1
-# https://github.com/halostatue/diff-lcs/issues/94
-_gitrev=1960a67b995137b1ac2a5e37c42d3984910266cc
-pkgrel=1
+pkgver=1.6.1
+pkgrel=0
 pkgdesc="Generate difference sets between Ruby sequences"
 url="http://halostatue.github.io/diff-lcs/"
 arch="noarch"
@@ -13,8 +11,8 @@ license="MIT"
 depends="ruby"
 options="!check"  # to avoid cyclic dependency with rspec
 subpackages="$pkgname-tools"
-source="https://github.com/halostatue/$_gemname/archive/$_gitrev/$pkgname-$_gitrev.tar.gz"
-builddir="$srcdir/$_gemname-$_gitrev"
+source="https://github.com/halostatue/$_gemname/archive/v$pkgver/$_gemname-$pkgver.tar.gz"
+builddir="$srcdir/$_gemname-$pkgver"
 
 build() {
 	gem build $_gemname.gemspec
@@ -36,7 +34,7 @@ package() {
 	cd "$gemdir"
 	rm -r cache/ build_info/ doc/
 	cd "$geminstdir"
-	rm -r docs/ spec/ Rakefile *.md *.rdoc *.txt
+	rm -r docs/ spec/ Rakefile *.md *.txt
 }
 
 tools() {
@@ -47,5 +45,5 @@ tools() {
 }
 
 sha512sums="
-7724a44150510086214ff8ee13ed701d431077d45d0b5a95cb05851b4ed4cffb61a2d1ba3369452751c66653d9523e96a9e3c22d2da0a8dd3aca0b47f1f85cfc  ruby-diff-lcs-1960a67b995137b1ac2a5e37c42d3984910266cc.tar.gz
+fccd868b789a5976342c370b08e8470c6e2c502742887494008fe8eb4e31c61f223209769cc52b7dd7e4e84776c843ad40abb9bb664b084feb714ec305ba4ce4  diff-lcs-1.6.1.tar.gz
 "
