--- a/community/ruby-rspec-support/APKBUILD
+++ b/community/ruby-rspec-support/APKBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ruby-rspec-support
 _gemname=${pkgname#ruby-}
-pkgver=3.13.1
-pkgrel=1
+pkgver=3.13.2
+pkgrel=0
 pkgdesc="Support utilities for RSpec gems"
 url="https://github.com/rspec/$_gemname"
 arch="noarch"
 license="MIT"
 depends="ruby"
 options="!check"  # rspec's tests are written in rspec
-source="$pkgname-$pkgver.tar.gz::https://github.com/rspec/$_gemname/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/rspec/rspec/archive/$_gemname-v$pkgver.tar.gz
 	gemspec.patch"
-builddir="$srcdir/$_gemname-$pkgver"
+builddir="$srcdir/rspec-$_gemname-v$pkgver/$_gemname"
 
 build() {
 	gem build $_gemname.gemspec
@@ -35,6 +35,6 @@ package() {
 }
 
 sha512sums="
-afbd76d937c5e2bfff8eccd69f4cd5081befc667fdef699743f809bf3f3bdda2404a24fb2408bce3373d7995406ca11a76c734d973957aeb6ada3d41fa59249c  ruby-rspec-support-3.13.1.tar.gz
+f4f46ecfc6d5b9dae9a210fd25b0ac96c9491e9b20aadae8d26997f45cc81b3dce6dbbffc727e406517869ae68cc46f73832f8f3793cb10055c342dc16f5848d  ruby-rspec-support-3.13.2.tar.gz
 e9d611ea1789e835f742aa92f1e668840139e2621898edf158dc53e111db4119a324da65d2d28f5c6e737c82f261f4adb3beb8c244ee01d2f618778ed62d3731  gemspec.patch
 "
