community/ruby-rspec-core: upgrade to 3.13.3

--- a/community/ruby-rspec-core/APKBUILD
+++ b/community/ruby-rspec-core/APKBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ruby-rspec-core
 _gemname=${pkgname#ruby-}
-pkgver=3.13.2
-pkgrel=1
+pkgver=3.13.3
+pkgrel=0
 pkgdesc="RSpec runner and formatters"
 url="https://relishapp.com/rspec/rspec-core/docs"
 arch="noarch"
 license="MIT"
 depends="ruby ruby-rspec-support~${pkgver%.*}"
 options="!check"  # rspec's tests are written in rspec
-source="$pkgname-$pkgver.tar.gz::https://github.com/rspec/$_gemname/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/rspec/rspec/archive/$_gemname-v$pkgver.tar.gz
 	gemspec.patch"
-builddir="$srcdir/$_gemname-$pkgver"
+builddir="$srcdir/rspec-$_gemname-v$pkgver/$_gemname"
 
 build() {
 	gem build $_gemname.gemspec
@@ -39,6 +39,6 @@ package() {
 }
 
 sha512sums="
-4729fa564adcc94ccd0416c63d100bac93faa2f6e4a498af55c3f13645eb28ecb7e106bb02a2eba1aa2748196e6aa5557909fb0e619067b731bd9111aa5fde31  ruby-rspec-core-3.13.2.tar.gz
-e0cbcfddcc4c73d9b9673907e3b1a785b399c0b3b213761e9dbca9fadc55d50a88389eaf561f5603bd674eb94ce9f2ecf829d884eaa77df8ef1b565c0c7f25f2  gemspec.patch
+decceb71366a0baa5b690a1f58224f340b8559bef90f5fdfd0a0066d884db7b32c4cf841959776eeab41b7285d77e6e1cb7ee8b11c436361ac95e133d41f7aa0  ruby-rspec-core-3.13.3.tar.gz
+f1fa922515b8253f536a7354b91c3b4204f814bd8e14a4c1876906f310e659bd7c12f5f6a836342c9ada3646c1f7c8240111e0fb7df056e0f9028a170b5041b4  gemspec.patch
 "
