community/mauikit-documents: add qt6-qtdeclarative-private-dev to makedepends
Fix build error due to missing path.

```
CMake Error in src/code/cbz/CMakeLists.txt:
  Imported target "Qt6::QuickPrivate" includes non-existent path

    "/usr/include/qt6/QtQuick/6.8.2"

  in its INTERFACE_INCLUDE_DIRECTORIES.  Possible reasons include:

  * The path was deleted, renamed, or moved to another location.

  * An install or uninstall procedure did not complete successfully.

  * The installation package was faulty and references files it does not
  provide.
```

--- a/community/mauikit-documents/APKBUILD
+++ b/community/mauikit-documents/APKBUILD
@@ -5,9 +5,9 @@
 # group=maui
 pkgname=mauikit-documents
 pkgver=4.0.0
-pkgrel=0
+pkgrel=1
 pkgdesc="MauiKit Documents components"
-# armhf blocked by mauikit -> qt5-qtdeclarative
+# armhf blocked by mauikit -> qt6-qtdeclarative
 arch="all !armhf"
 url="https://mauikit.org/"
 license="GPL-2.0-or-later"
@@ -27,6 +27,7 @@ makedepends="
 	mauikit
 	mauikit-dev
 	qt6-qtbase-dev
+	qt6-qtdeclarative-private-dev
 	poppler-qt5-dev
 	samurai
 	zlib-dev
