community/soupault: update lock file & disable on loongarch64
Fix build for Alpine 3.22

--- a/community/soupault/APKBUILD
+++ b/community/soupault/APKBUILD
@@ -5,7 +5,8 @@ pkgver=4.11.0
 pkgrel=0
 pkgdesc="Static website generator based on HTML element tree rewriting"
 url="https://soupault.app/"
-arch="all"
+# loongarch64: unmet availability conditions, e.g. 'sys-ocaml-version = "5.3.0"
+arch="all !loongarch64"
 license="MIT"
 makedepends="
 	dune
@@ -101,5 +102,5 @@ package() {
 
 sha512sums="
 0404890e42626986914e22376ee5c2998290e03164ce1a6ff4d5510633a2f6783c9b6a8f545a96222d93ab24fc057af5d8aa494d3d5320ec3bcd23fc3eedec7b  soupault-4.11.0.tar.gz
-8d0212e056caa979ac4e3b848b727beb39b4fee69c1f9fdffa437f4412b4fa1a4524536e043a74ecfacd2e5c8ffded2941c82d4c8bca992daf31c5e29765d0e6  soupault.opam.locked
+33feaeb7915a71aeb3f3cd2084ab13fe1bb1148867c864e3e3bb669b030a34d248f64aa76f29b37923853e6943787faaefbb6010f474f59f63d3480fe7146416  soupault.opam.locked
 "
