community/emacs-popup: fix build with emacs 30.1

--- a/community/emacs-popup/APKBUILD
+++ b/community/emacs-popup/APKBUILD
@@ -2,7 +2,7 @@
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=emacs-popup
 pkgver=0.5.9
-pkgrel=0
+pkgrel=1
 _pkgreal=popup
 pkgdesc="Visual popup user interface library"
 url="https://github.com/auto-complete/popup-el"
@@ -10,12 +10,13 @@ arch="noarch"
 license="GPL-3.0-or-later"
 depends="cmd:emacs"
 makedepends="emacs-nox"
-source="https://github.com/auto-complete/popup-el/archive/v$pkgver/emacs-popup-$pkgver.tar.gz"
+source="https://github.com/auto-complete/popup-el/archive/v$pkgver/emacs-popup-$pkgver.tar.gz
+	lexical-binding.patch
+	"
 builddir="$srcdir/popup-el-$pkgver"
 
 build() {
 	emacs -batch -q -no-site-file -L . \
-		-eval '(setq byte-compile-error-on-warn t)' \
 		-f batch-byte-compile \
 		./*.el
 }
@@ -36,4 +37,5 @@ package() {
 
 sha512sums="
 1a8c5ecb56e695f7a37915063d4e105cee92f8ae5a21e2e39ffe556dfdcf03c056b69f5e36c6ff3643713a914bb531adabcfbc525c531821e1520f7b3e93dc0b  emacs-popup-0.5.9.tar.gz
+cfbb856e3584e399e804f3dbf92734ef67c472bc7ea041aedf28088ed716de0173d8525f09a68ee5afb4ee94c05187a4ffabbeb370f3d27f125b1b6ba09291c5  lexical-binding.patch
 "
