community/jj_tui: update lock file & disable on loongarch64
Fix build for Alpine 3.22

--- a/community/jj_tui/APKBUILD
+++ b/community/jj_tui/APKBUILD
@@ -5,7 +5,9 @@ pkgver=0.8.9
 pkgrel=0
 pkgdesc="TUI for the Jujutsu version control system"
 url="https://github.com/faldor20/jj_tui"
-arch="all !armhf !armv7 !x86 !s390x" # jujutsu
+# armhf, armv7, x86, s390x: follow community/jujutsu
+# loongarch64: unmet availability conditions, e.g. 'sys-ocaml-version = "5.3.0"
+arch="all !armhf !armv7 !x86 !s390x !loongarch64"
 license="MIT"
 depends="jujutsu"
 makedepends="
@@ -107,7 +109,7 @@ package() {
 
 sha512sums="
 bc18aaa716f19983511a122324ad2e0ccef0f687162d6bc0cc76017082367e4fb009ae84772052d62e7be8e135e8b459009d7089d7bd96fbd32e6dc0c3b596d5  jj_tui-0.8.9.tar.gz
-d2fafc729f0e2dcc56778566af0f9152c286cbddd592a30cd9fd8ee3c7f761cdf9af4648a79b129f86013e3c6c4c14e45e270d914c267fff9cd4bfbf955808a8  jj_tui.opam.locked
+4aacbf998da7e9802078bdf42211d4d2dcf40839b8410cc00d70933e736e032062cb43b74a239ee624a0bb32553536c4560ae0243522742129835580dba234d4  jj_tui.opam.locked
 44d8fffaa933574dc7bf840c21d1a63d46ce48a406d7fe95647e034b091f1d12dc0a93bc082018a9b41f16635ab104b9b6b53169b0067b63f4bc90edb5da9f44  missing-libs.patch
 5bb6c1195afe12696e562732c481c8034e50183b2ebe6636182319fec2d09d8047212d8b9aea5b6a2f48cb6a2a1adb25dbdae80a577c5617e9ae2fa7059e34d3  opam-file.patch
 f848b3d5d240b130ce44183e4345efcf01919fc22ff2b220e4cee4278519c39e8ec93280475906b54b3768633d74feb583b96ea79dc2ad5de5920b6f167711eb  update-picos.patch
