community/direnv: upgrade to 2.36.0

--- a/community/direnv/APKBUILD
+++ b/community/direnv/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Kevin Daudt <kdaudt@alpinelinux.org>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=direnv
-pkgver=2.35.0
-pkgrel=4
+pkgver=2.36.0
+pkgrel=0
 pkgdesc="Environment variable switcher for the shell"
 url="https://direnv.net"
 license="MIT"
@@ -11,12 +11,8 @@ arch="all"
 depends="bash"
 makedepends="go"
 subpackages="$pkgname-doc $pkgname-fish::noarch"
+options="net" # go modules
 source="$pkgname-$pkgver.tar.gz::https://github.com/direnv/direnv/archive/v$pkgver.tar.gz"
-
-export GOFLAGS="$GOFLAGS -modcacherw"
-export GOCACHE="${GOCACHE:-"$srcdir/go-cache"}"
-export GOTMPDIR="${GOTMPDIR:-"$srcdir"}"
-export GOMODCACHE="${GOMODCACHE:-"$srcdir/go"}"
 
 build() {
 	make
@@ -40,5 +36,5 @@ fish() {
 }
 
 sha512sums="
-d46b6d8cd488f9aafe764193386cb177b5d9dd8e7401b3cd89a32deaa4e26778a6e0d889dd7f7b65aa60943a59b4fc75f7d5dbfb822710a0d4c0876240ef0495  direnv-2.35.0.tar.gz
+81f1673fdbe904906663f1929562ed430bbae2ea3560885f8289b23779f22b0e05f05ea69de83cbd6deab4f4bdf6c13b4211e2faf3b5fd5867ed7a37ad51cbe9  direnv-2.36.0.tar.gz
 "
