testing/dockerize: upgrade to 0.9.3

--- a/testing/dockerize/APKBUILD
+++ b/testing/dockerize/APKBUILD
@@ -1,19 +1,17 @@
 # Contributor: Christian Kampka <christian@kampka.net>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=dockerize
-pkgver=0.9.0
-pkgrel=4
+pkgver=0.9.3
+pkgrel=0
 pkgdesc="Utility to simplify running applications in docker containers."
 url="https://github.com/jwilder/dockerize"
 arch="all"
 license="MIT"
-options="!check" # No test suite
+# net: go dependencies
+# !check: no test suite
+options="net !check"
 makedepends="go"
 source="$pkgname-$pkgver.tar.gz::https://github.com/jwilder/dockerize/archive/v$pkgver.tar.gz"
-
-export GOCACHE="${GOCACHE:-"$srcdir/go-cache"}"
-export GOTMPDIR="${GOTMPDIR:-"$srcdir"}"
-export GOMODCACHE="${GOMODCACHE:-"$srcdir/go"}"
 
 build() {
 	go build -ldflags "-X main.buildVersion=$pkgver"
@@ -26,5 +24,5 @@ package() {
 }
 
 sha512sums="
-664128cbd98420d31dc766c785c66a03391dfead5cbdb7a8aac71c4ffbc0ef3fccc109fd1cc786d80b0bbb6be6e700a56ab4ed61f42fd971e56ab8222233b0e5  dockerize-0.9.0.tar.gz
+999b9559e743a7084006e9b9d3d11371c5bf6ca5b889200e45e67a728942637954e6a7d1fc7f9a3d3633ec338874e7cd3a14bc1abd26eb1468beb9ba6fe1084d  dockerize-0.9.3.tar.gz
 "
