testing/mesa-asahi: upgrade to 20250425
remove swrast, osmesa and glapi

--- a/testing/mesa-asahi/APKBUILD
+++ b/testing/mesa-asahi/APKBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Milan P. Stanić <mps@arvanta.net>
 # this package is temporary for asahi linux
 pkgname=mesa-asahi
-_asahiver=20241211
+_asahiver=20250425
 _commit=asahi-$_asahiver
-pkgver=24.3.0_pre$_asahiver
+pkgver=25.1.0_pre$_asahiver
 pkgrel=0
 pkgdesc="Mesa DRI OpenGL library for Asahi linux"
 url="https://gitlab.freedesktop.org/asahi/mesa"
@@ -14,18 +14,15 @@ subpackages="
 	$pkgname-dri-gallium:_gallium
 	$pkgname-va-gallium:_va
 	$pkgname-vdpau-gallium:_vdpau
-	$pkgname-glapi
 	$pkgname-egl
 	$pkgname-gl
 	$pkgname-gles
 	$pkgname-xatracker
-	$pkgname-osmesa
 	$pkgname-gbm
 	$pkgname-vulkan-swrast:_vulkan
 	$pkgname-rusticl
 	"
-depends="$pkgname-glapi=$pkgver-r$pkgrel"
-_llvmver=19
+_llvmver=20
 depends_dev="
 	libdrm-dev
 	libxext-dev
@@ -44,7 +41,7 @@ makedepends="
 	elfutils-dev
 	glslang-dev
 	libtool
-	libclc-dev
+	libclc-dev$_llvmver-dev
 	libxfixes-dev
 	libva-dev
 	libvdpau-dev
@@ -80,7 +77,7 @@ options="!check" # we skip tests intentionally
 builddir="$srcdir"/mesa-asahi-$_asahiver
 
 _dri_driverdir=/usr/lib/xorg/modules/dri
-_gallium_drivers="swrast,virgl,asahi,svga,zink"
+_gallium_drivers="virgl,asahi,svga,zink"
 _vulkan_drivers="swrast"
 _vulkan_layers="device-select,overlay"
 	_rusticl=true
@@ -114,11 +111,9 @@ build() {
 		-Dplatforms=x11,wayland \
 		-Dllvm=enabled \
 		-Dshared-llvm=enabled \
-		-Dshared-glapi=enabled \
 		-Dgbm=enabled \
 		-Dglx=dri \
 		-Dopengl=true \
-		-Dosmesa=true \
 		-Dgles1=enabled \
 		-Dgles2=enabled \
 		-Degl=enabled \
@@ -178,16 +173,6 @@ gl() {
 	amove usr/lib/libGL.so*
 }
 
-glapi() {
-	pkgdesc="Mesa shared glapi"
-	depends=""
-	provider_priority=0
-	provides="mesa-glapi"
-	replaces="mesa-glapi"
-
-	amove usr/lib/libglapi.so.*
-}
-
 gles() {
 	pkgdesc="Mesa libGLESv2 runtime libraries"
 	depends="mesa-asahi=$pkgver-r$pkgrel"
@@ -205,16 +190,6 @@ xatracker() {
 	replaces="mesa-xatracker"
 
 	amove usr/lib/libxatracker*.so.*
-}
-
-osmesa() {
-	pkgdesc="Mesa offscreen rendering libraries"
-	depends="mesa-asahi=$pkgver-r$pkgrel"
-	provider_priority=0
-	provides="mesa-osmesa"
-	replaces="mesa-osmesa"
-
-	amove usr/lib/libOSMesa.so.*
 }
 
 gbm() {
@@ -339,5 +314,5 @@ _vulkan_layers() {
 }
 
 sha512sums="
-3cffd24548a3303ad318f6ddf9a39d908c503090b1dcc389e4636565e27cdc69a7da28781d59bda092a07918863ac1938f34232b1554545ec5996cbcccaadab2  mesa-asahi-20241211.tar.gz
+0017eff794de820798fedbed7874b7efde365b468472a15ace6a07bab76d50cdfd08fda7d57a59699823eb99bf5aacd37214b85dbb99d6b0135c5b69185b51b2  mesa-asahi-20250425.tar.gz
 "
