--- a/community/roswell/APKBUILD
+++ b/community/roswell/APKBUILD
@@ -25,7 +25,7 @@ prepare() {
 
 build() {
 	local variant="-musl"
-	#[ "$CARCH" = "x86" ] && variant="-musl1.1"
+	[ "$CARCH" = "x86" ] && variant="-musl1.1"
 
 	./configure \
 		--build=$CBUILD \
