community/libnbcompat: move from testing

--- a/community/libnbcompat/APKBUILD
+++ b/community/libnbcompat/APKBUILD
@@ -8,7 +8,7 @@ url="https://github.com/archiecobbs/libnbcompat"
 arch="all"
 license="BSD-2-Clause"
 makedepends="autoconf automake bash libtool"
-subpackages="$pkgname-dev"
+subpackages="$pkgname-static $pkgname-dev"
 source="https://github.com/archiecobbs/libnbcompat/archive/$pkgver/libnbcompat-$pkgver.tar.gz"
 
 prepare() {
