--- a/community/g++-cross-embedded/APKBUILD
+++ b/community/g++-cross-embedded/APKBUILD
@@ -6,8 +6,8 @@
 # Contributor: Anatol Pomozov <anatol.pomozov@gmail.com>
 # Contributor: Martin Schmölzer <mschmoelzer@gmail.com>
 pkgname=g++-cross-embedded
-pkgver=14.2.0
-pkgrel=1
+pkgver=15.1.0
+pkgrel=0
 pkgdesc="C++ compilers from the GNU Compiler Collection for embedded targets"
 url="https://gcc.gnu.org/"
 depends="gcc"
@@ -29,8 +29,9 @@ _targets_mainstream="
 	riscv-none-elf
 	"
 
+# TODO: reenable msp430-elf once https://gcc.gnu.org/bugzilla/show_bug.cgi?id=119953
+# is fixed
 _targets_exotic="
-	msp430-elf
 	or1k-elf
 	aarch64-none-elf
 	"
@@ -213,6 +214,6 @@ _install_subpkg() {
 }
 
 sha512sums="
-932bdef0cda94bacedf452ab17f103c0cb511ff2cec55e9112fc0328cbf1d803b42595728ea7b200e0a057c03e85626f937012e49a7515bc5dd256b2bf4bc396  gcc-14.2.0.tar.xz
+ddd35ca6c653dffa88f7c7ef9ee4cd806e156e0f3b30f4d63e75a8363361285cd566ee73127734cde6a934611de815bee3e32e24bfd2e0ab9f7ff35c929821c1  gcc-15.1.0.tar.xz
 52e45ba12be74ce6f740eff3a79e3da87c80b06275fd00b2a1193b052fd0891e7c4c09fd6a9c204a82178c135318d69db3e250f12c37eca72edb1e3c0b0be2db  newlib-getentropy.patch
 "
