--- a/community/py3-betamax_serializers/APKBUILD
+++ b/community/py3-betamax_serializers/APKBUILD
@@ -2,27 +2,29 @@
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=py3-betamax_serializers
 pkgver=0.2.1
-pkgrel=6
+pkgrel=7
 pkgdesc="A collection of serializers that may eventually be included in betamax"
 url="https://gitlab.com/betamax/serializers"
 arch="noarch"
 license="Apache-2.0"
 depends="python3 py3-yaml py3-betamax"
-makedepends="py3-setuptools"
+makedepends="py3-gpep517 py3-setuptools"
 subpackages="$pkgname-pyc"
 source="$pkgname-$pkgver.tar.gz::https://gitlab.com/betamax/serializers/-/archive/$pkgver/serializers-$pkgver.tar.gz"
 builddir="$srcdir/serializers-$pkgver"
+options="!check" # no tests
 
 build() {
-	python3 setup.py build
-}
-
-check() {
-	python3 setup.py test
+	gpep517 build-wheel \
+		--wheel-dir .dist \
+		--output-fd 3 3>&1 >&2
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer -d "$pkgdir" \
+		.dist/*.whl
 }
 
-sha512sums="64821be8a3166fdb7c452d9586bddd044accc94d7480fca48d45897f56cac1cc26f8c6bb0e2a7790141a761be8b0d82d042bdee437094413dcec6a9876a7ebc2  py3-betamax_serializers-0.2.1.tar.gz"
+sha512sums="
+64821be8a3166fdb7c452d9586bddd044accc94d7480fca48d45897f56cac1cc26f8c6bb0e2a7790141a761be8b0d82d042bdee437094413dcec6a9876a7ebc2  py3-betamax_serializers-0.2.1.tar.gz
+"
