community/betula: upgrade to 1.4.0
https://git.sr.ht/~bouncepaw/betula/refs/v1.4.0

--- a/community/betula/APKBUILD
+++ b/community/betula/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Simon Zeni <simon@bl4ckb0ne.ca>
 pkgname=betula
-pkgver=1.3.1
-pkgrel=4
+pkgver=1.4.0
+pkgrel=0
 pkgdesc="free single-user bookmarking software"
 url="https://betula.mycorrhiza.wiki/"
 arch="all"
@@ -14,7 +14,8 @@ install="$pkgname.pre-install"
 builddir="$srcdir/$pkgname-v$pkgver"
 source="$pkgname-v$pkgver.tar.gz::https://git.sr.ht/~bouncepaw/betula/archive/v$pkgver.tar.gz
 	$pkgname.initd
-	$pkgname.confd"
+	$pkgname.confd
+	fix-sitedomain-tests.patch"
 
 build() {
 	make betula
@@ -34,7 +35,8 @@ package() {
 
 }
 sha512sums="
-9565ec7cad762bdc1279ff3aa66814f66bd9ea7271b1cf94952c31df056220a8692b7e1392b41ec8ba5d3f4891e9ed9d0e681b113863bb78e34e99a667075814  betula-v1.3.1.tar.gz
+8b2c722f01ac7df1c6f16e5876d063803ba072c0323d4532c893079acf14cc5de3fcc0082ae70735e5d1a7c17e5a9f8fd448140e1e310b621c2e88760b27fb99  betula-v1.4.0.tar.gz
 93b8c65542050a04c225dbbf375dc5b1c44ac21f49c03976745d76e6d8f3b2cc4b66151324cf7e60d7fe5737c7f6b054798d7f5aa01de1eea86ba7e3002929fa  betula.initd
 9d45d9b2b67248ec1cf7736453af1c54da3ddb82b1f37df2046e45603db90ee4654f23b7c5d40e702a3ae56f9a800ddc051369dbf5082e86580ab625208f595e  betula.confd
+7d4d85372168ad2f1ad95492664e414d10caae9abf4ff57d53b9fc1dd4c973df1f7f7f065390ae5b9b52179af2fb1afbcc1447acbcc7e19a8f085497b802504f  fix-sitedomain-tests.patch
 "
