main/py3-certifi: take over maintainership
Current maintainer has been inactive since 2022

--- a/main/py3-certifi/APKBUILD
+++ b/main/py3-certifi/APKBUILD
@@ -1,5 +1,6 @@
 # Contributor: Peter Bui <pnutzh4x0r@gmail.com>
-# Maintainer: Dmitry Romanenko <dmitry@romanenko.in>
+# Contributor: Dmitry Romanenko <dmitry@romanenko.in>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=py3-certifi
 pkgver=2025.4.26
 pkgrel=0
