--- a/community/py3-send2trash/APKBUILD
+++ b/community/py3-send2trash/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=py3-send2trash
 pkgver=1.8.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Send file to trash natively"
 url="https://github.com/arsenetar/send2trash"
 arch="noarch"
@@ -25,7 +25,7 @@ check() {
 
 package() {
 	python3 -m installer -d "$pkgdir" \
-		.dist/Send2Trash*.whl
+		.dist/send2trash*.whl
 }
 
 sha512sums="
