community/yeti: move from testing

--- a/community/yeti/APKBUILD
+++ b/community/yeti/APKBUILD
@@ -5,10 +5,14 @@ pkgver=1.1
 pkgrel=0
 pkgdesc="ML-like functional language for the JVM"
 url="https://mth.github.io/yeti/"
-# riscv64: blocked by apache-ant & openjdk8
+# riscv64: blocked by apache-ant
 arch="noarch !riscv64"
 license="BSD-3-Clause"
-_jdkbuild=8
+case "$CARCH" in
+	riscv64)	_jdkbuild=21		;;
+	loongarch64)	_jdkbuild=8-loongarch	;;
+	*)		_jdkbuild=8		;;
+esac
 makedepends="apache-ant openjdk$_jdkbuild-jdk"
 source="https://github.com/mth/yeti/archive/refs/tags/v$pkgver/yeti-$pkgver.tar.gz"
 
@@ -19,7 +23,7 @@ case "$CARCH" in
 esac
 
 build() {
-	export JAVA_HOME="/usr/lib/jvm/java-$_jdkbuild-openjdk"
+	export JAVA_HOME="/usr/lib/jvm/java-${_jdkbuild%%-*}-openjdk"
 	export PATH="$JAVA_HOME/bin:$PATH"
 
 	ant jar
@@ -30,7 +34,7 @@ check() {
 }
 
 package() {
-	install -Dm755 /dev/stdin "$pkgdir"/usr/bin/yeti <<-EOF
+	install -Dm755 /proc/self/fd/0 "$pkgdir"/usr/bin/yeti <<-EOF
 	#!/bin/sh
 	exec java -jar /usr/share/java/yeti.jar "\$@"
 	EOF
