community/wordgrinder: move from testing

--- a/community/wordgrinder/APKBUILD
+++ b/community/wordgrinder/APKBUILD
@@ -28,6 +28,9 @@ build() {
 
 package() {
 	make install PREFIX=/usr DESTDIR="$pkgdir"
+
+	install -Dvm644 licenses/COPYING* \
+		-t "$pkgdir"/usr/share/licenses/$pkgname/
 }
 
 sha512sums="
