community/py3-crashtest: build with gpep517, update urls, run tests
- Build with gpep517:`setup.py install` is deprecated

- Update website and source urls: old github namespace
  `sdispater/crashtest` redirects to `python-poetry/crashtest`. The
  pypi tarball does not include the `tests` directory, use the github
  archive tarballs so tests can be run

- Fix build error due to removed `setup.py test` command: `error:
  invalid command 'test'`

Ref: https://gitlab.alpinelinux.org/alpine/aports/-/issues/17110

--- a/community/py3-crashtest/APKBUILD
+++ b/community/py3-crashtest/APKBUILD
@@ -3,30 +3,35 @@
 pkgname=py3-crashtest
 _pyname=crashtest
 pkgver=0.4.1
-pkgrel=4
+pkgrel=5
 pkgdesc="Manage Python errors with ease"
-url="https://github.com/sdispater/crashtest"
+url="https://github.com/python-poetry/crashtest"
 arch="noarch"
 license="MIT"
 depends="python3"
-makedepends="py3-setuptools"
+makedepends="py3-gpep517 py3-poetry-core"
 checkdepends="py3-pytest py3-pytest-cov"
 subpackages="$pkgname-pyc"
-source="https://files.pythonhosted.org/packages/source/c/crashtest/crashtest-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/python-poetry/crashtest/archive/$pkgver/crashtest-$pkgver.tar.gz"
 builddir="$srcdir/$_pyname-$pkgver"
 
 build() {
-	python3 setup.py build
+	gpep517 build-wheel \
+		--wheel-dir .dist \
+		--output-fd 3 3>&1 >&2
 }
 
 check() {
-	python3 setup.py test
+	python3 -m venv --clear --without-pip --system-site-packages .testenv
+	.testenv/bin/python3 -m installer .dist/*.whl
+	.testenv/bin/python3 -m pytest
 }
 
 package() {
-	python3 setup.py install --skip-build --root="$pkgdir"
+	python3 -m installer -d "$pkgdir" \
+		.dist/*.whl
 }
 
 sha512sums="
-3f4d940450bcd40ff56059756ed81894556b75b4c17f99ac8d899088eab07a6c2cbbf206188b381801d143e590bdd05f609d48541f041e380383031c98f4d874  crashtest-0.4.1.tar.gz
+83faf66fb422c8fb13780ac5a8ddd4c47ebb77f248bea0eb94962caff24265b107fd8bbc0d577853969c4aecedd83977e9c74c81dc7e772b7684e09a832a0a2f  py3-crashtest-0.4.1.tar.gz
 "
