community/crosstool-ng: move from testing

--- a/community/crosstool-ng/APKBUILD
+++ b/community/crosstool-ng/APKBUILD
@@ -5,8 +5,8 @@ pkgver=1.27.0
 pkgrel=0
 pkgdesc="Versatile tool for building (cross-)toolchains"
 url="https://crosstool-ng.github.io/"
-license="LGPL-2.1-or-later GPL-2.0-or-later CC-BY-SA-2.5"
 arch="all"
+license="LGPL-2.1-or-later AND GPL-2.0-or-later AND CC-BY-SA-2.5"
 depends="
 	autoconf
 	automake
@@ -23,11 +23,19 @@ depends="
 	patch
 	rsync
 	sed
+	texinfo
 	wget
 	xz
-	texinfo"
-makedepends="ncurses-dev help2man xz gettext-dev"
-subpackages="$pkgname-doc $pkgname-bash-completion"
+	"
+makedepends="
+	gettext-dev
+	help2man
+	ncurses-dev
+	"
+subpackages="
+	$pkgname-doc
+	$pkgname-bash-completion
+	"
 source="http://crosstool-ng.org/download/crosstool-ng/crosstool-ng-$pkgver.tar.xz
 	0001-sunrpc.diff
 	"
@@ -40,7 +48,8 @@ prepare() {
 }
 
 build() {
-	./configure --prefix=/usr \
+	./configure \
+		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info
@@ -56,8 +65,8 @@ package() {
 		"$pkgdir"/usr/share/bash-completion/completions/$pkgname
 
 	# glibc patch
-	for glibc in 2.28 2.29; do
-		install -D -m 0644 "$srcdir"/0001-sunrpc.diff \
+	local glibc; for glibc in 2.28 2.29; do
+		install -Dvm 0644 "$srcdir"/0001-sunrpc.diff \
 			"$pkgdir"/usr/share/crosstool-ng/packages/glibc/$glibc/0001-sunrpc.patch
 	done
 }
