community/mailutils: move from testing

--- a/community/mailutils/APKBUILD
+++ b/community/mailutils/APKBUILD
@@ -11,12 +11,15 @@ license="GPL-3.0-or-later"
 replaces="mailx"
 depends_dev="$pkgname-libs=$pkgver-r$pkgrel"
 makedepends="
-	libunistring-dev
-	libtool
 	gnutls-dev
+	libtool
+	libunistring-dev
 	readline-dev
 	"
-checkdepends="autoconf netcat-openbsd"
+checkdepends="
+	autoconf
+	netcat-openbsd
+	"
 subpackages="
 	$pkgname-dev
 	$pkgname-doc
