community/mp3gain: move from testing

--- a/community/mp3gain/APKBUILD
+++ b/community/mp3gain/APKBUILD
@@ -4,7 +4,7 @@ maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=mp3gain
 pkgver=1.6.2
 pkgrel=3
-pkgdesc="Analyzes and adjusts the volume of MP3 files"
+pkgdesc="Analyze and adjust the volume of MP3 files"
 url="https://mp3gain.sourceforge.net/"
 arch="all"
 license="LGPL-2.1-or-later"
